Modified team section to pick up members added from the admin with the Django template language

--- a/main/website/templates/website/index.html
+++ b/main/website/templates/website/index.html
@@ -218,13 +218,13 @@
     <div class="container-fluid bg-light py-5">
         <div class="container py-5">
             <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Case Study</div>
+                <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Case Studies</div>
                 <h1 class="mb-4">Explore Our Recent AI Case Studies</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-1.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-1.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Robotic Automation</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -235,7 +235,7 @@
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-2.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Machine learning</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-3.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-3.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Predictive Analysis</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -457,7 +457,7 @@
                             <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                             <p class="fs-4">Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg"
+                                <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'img/testimonial-1.jpg' %}"
                                     style="width: 60px; height: 60px;">
                                 <div class="ps-3">
                                     <h5 class="mb-1">Client Name</h5>
@@ -469,7 +469,7 @@
                             <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                             <p class="fs-4">Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg"
+                                <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'img/testimonial-2.jpg' %}"
                                     style="width: 60px; height: 60px;">
                                 <div class="ps-3">
                                     <h5 class="mb-1">Client Name</h5>
@@ -481,7 +481,7 @@
                             <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                             <p class="fs-4">Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg"
+                                <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'img/testimonial-3.jpg' %}"
                                     style="width: 60px; height: 60px;">
                                 <div class="ps-3">
                                     <h5 class="mb-1">Client Name</h5>
