Created block title

--- a/main/website/templates/website/about.html
+++ b/main/website/templates/website/about.html
@@ -1,6 +1,6 @@
 {% extends "website/base.html" %}
 {% load static %}
-<title> Scripted O | About</title>
+<title>{% block title %} Scripted O | About Us {% endblock title %}</title>
 
 {% block content %}
     <!-- Hero Start -->
