--- a/main/website/templates/website/contact.html
+++ b/main/website/templates/website/contact.html
@@ -1,6 +1,8 @@
 {% extends "website/base.html" %}
 {% load static %}
 
+<title>{% block title %} Scripted O | Contact Us {% endblock title %}</title>
+
 {% block content %}
     <!-- Hero Start -->
     <div class="container-fluid pt-5 bg-primary hero-header">
