Created block title for home page

--- a/main/website/templates/website/index.html
+++ b/main/website/templates/website/index.html
@@ -1,6 +1,8 @@
 {% extends 'website/base.html' %}
 {% load static %}
 
+<title>{% block title %} Scripted O | Home {% endblock title %}</title>
+
 {% block content %}
     <!-- Hero Start -->
     <div class="container-fluid pt-5 bg-primary hero-header mb-5">
