Created a block title for services

--- a/main/website/templates/website/services.html
+++ b/main/website/templates/website/services.html
@@ -1,6 +1,6 @@
 {% extends "website/base.html" %}
 {% load static %}
-
+<title>{% block title %} Scripted O | Our Services {% endblock title %}</title>
 {% block content %}
 
     <!-- Hero Start -->
