--- a/main/website/templates/website/case-studies.html
+++ b/main/website/templates/website/case-studies.html
@@ -8,17 +8,17 @@
         <div class="container pt-5">
             <div class="row g-5 pt-5">
                 <div class="col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
-                    <h1 class="display-4 text-white mb-4 animated slideInRight">Our Projects</h1>
+                    <h1 class="display-4 text-white mb-4 animated slideInRight">Our Case Studies</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
                             <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                             <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Our Projects</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Our Case Studies</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="col-lg-6 align-self-end text-center text-lg-end">
-                    <img class="img-fluid" src="img/hero-img.png" alt="" style="max-height: 300px;">
+                    <img class="img-fluid" src="{% static 'img/hero-img.png' %}" alt="" style="max-height: 300px;">
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
     </div>
     <!-- Full Screen Search End -->
 
-    <!-- Case Start -->
+    <!-- Case Studies Start -->
     <div class="container-fluid bg-light py-5">
         <div class="container py-5">
             <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -55,7 +55,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-1.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-1.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Robotic Automation</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-2.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Machine learning</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-3.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/project-3.jpg' %}" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Predictive Analysis</small>
                             <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
@@ -89,7 +89,7 @@
             </div>
         </div>
     </div>
-    <!-- Case End -->
+    <!-- Case Studies End -->
 
 
     <!-- FAQs Start -->
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-md-5 ps-lg-0 pt-5 pt-md-0 text-start wow fadeIn" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="img/newsletter.png" alt="">
+                    <img class="img-fluid" src="{% static 'img/newsletter.png' %}" alt="">
                 </div>
                 <div class="col-md-7 py-5 newsletter-text wow fadeIn" data-wow-delay="0.5s">
                     <div class="btn btn-sm border rounded-pill text-white px-3 mb-3">Newsletter</div>
