Modified case studies page

--- a/main/website/templates/website/case-studies.html
+++ b/main/website/templates/website/case-studies.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 {% empty %}
-                    <p>No case studies available at the moment.</p>
+                    <p class="text-center m-4">No case studies available at the moment.</p>
                 {% endfor %}
             </div>
         </div>
