--- a/main/website/templates/website/base.html
+++ b/main/website/templates/website/base.html
@@ -79,7 +79,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                    <a href="index.html" class="d-inline-block mb-3">
+                    <a href="{% url 'home' %}" class="d-inline-block mb-3">
                         <h1 class="text-white">Scripted <span class="text-primary">O</span></h1>
                     </a>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
@@ -100,9 +100,9 @@
                     <h5 class="text-white mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="{% url 'privacy-policy' %}">Privacy Policy</a>
                     <a class="btn btn-link" href="{% url 'terms-and-conditions' %}">Terms & Conditions</a>
-                    <a class="btn btn-link" href="">Career</a>
+                    <a class="btn btn-link" href="">Careers</a>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <h5 class="text-white mb-4">Our Services</h5>
