--- a/main/website/templates/website/case-studies.html
+++ b/main/website/templates/website/case-studies.html
@@ -11,8 +11,7 @@
                     <h1 class="display-4 text-white mb-4 animated slideInRight">Our Case Studies</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Our Case Studies</li>
                         </ol>
                     </nav>
